<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1_color">

    <RelativeLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay">


        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:id="@+id/actionbar_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/developer"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_container">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_bar_container"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:minHeight="50dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/error_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/btn_error_msg"
                    android:gravity="center"
                    android:maxWidth="300dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="#ffffff"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:visibility="gone" />


                <RelativeLayout
                    android:id="@+id/refresh_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <WebView
                        android:clickable="false"
                        android:longClickable="false"
                        android:id="@+id/webview"
                        android:layout_margin="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </WebView>
                </RelativeLayout>


            </RelativeLayout>


        </androidx.cardview.widget.CardView>




        <LinearLayout
            android:id="@+id/bottom_bar_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">


            <RelativeLayout
                android:id="@+id/call_btn"
                android:layout_width="140dp"
                android:layout_height="38dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_background_primary_dark">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/contact_developer"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />



            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/contact_btn"
                android:layout_width="140dp"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_background_primary_dark">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/send_email"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />




            </RelativeLayout>
        </LinearLayout>


    </RelativeLayout>





</RelativeLayout>
